--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
 <html>
-    <h3>I'm a big poo poo head.</h3>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <link rel="stylesheet" href="styles.css">
+        <script type="module" src="main.js" defer></script>
+    </head>
+    <body>
+        <div id="root">
+            <h2>The Button</h2>
+            <br/>
+        </div>
+    </body>
 </html>
