bug fixes, status messages and testing

--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
         <script type="module" src="main.js" defer></script>
     </head>
     <body>
-        <div id="root">
-            <h2>The Button</h2>
-            <br/>
-        </div>
+        <div id="root"></div>
     </body>
 </html>
