lots of reworks, cleanups and details

--- a/index.html
+++ b/index.html
@@ -7,5 +7,33 @@
     </head>
     <body>
         <div id="root"></div>
+        <div id="explaination">
+            <div class="details-container">
+                <div class="details">
+                  <h4>Purpose</h4>
+                  <br/>
+                  <div class="content">
+                    <p>I purchased this domain without any real plan. After thinking long a hard, I decided that I'd make the decision to not make the decision, and instead, leave it up to my friends to decide.</p>
+                    <p>Thus, the birth of the button game. Heavily inspired by a minecraft youtube series which was heavily inspired by a reddit post.</p>
+                    <p>The winner of this game can put whatever it is that they may want onto this website. </p>
+                  </div>
+                </div>
+              </div>
+            <div class="details-container">
+                <div class="details">
+                  <h4>How to play</h4>
+                  <br/>
+                  <div class="content">
+                    <ul>
+                        <li>The rules to the game are quite simple. Keep the button alive for the allotted time. In this case, it's set to one month.</li>
+                        <li>The button can be saved simply by posting `!save` in our groupme chat. The clock will be reset, and your score will be determined by how low the button was. The lower the score, the better.</li>
+                        <li>Your score will ALWAYS be overridden. For example: If your past save was in the green zone and you send `!save` when it's blue, your score is now in the blue zone.</li>
+                        <li>The button status will only be obtained by checking. Status alerts will not be sent to the chat. Additionally, you will not know what the other players have saved the button at (unless they tell you).</li>
+                        <li> Lastly and most importantly, if the button dies, everyone loses.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+        </div>
     </body>
 </html>
