chatgpt made words better

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                   <h4>Purpose</h4>
                   <br/>
                   <div class="content">
-                    <p>I purchased this domain without any real plan. After thinking long a hard, I decided that I'd make the decision to not make the decision, and instead, leave it up to my friends to decide.</p>
-                    <p>Thus, the birth of the button game. Heavily inspired by a minecraft youtube series which was heavily inspired by a reddit post.</p>
-                    <p>The winner of this game can put whatever it is that they may want onto this website. </p>
+                    <p>I bought this domain on a whim, without any concrete plans. After much contemplation, I made an unconventional choice – the decision to not decide. Instead, I entrusted my friends with the power to choose.</p>
+                    <p>And so, the Button Game was born. Drawing strong inspiration from a Minecraft YouTube series, which itself took cues from a Reddit post.</p>
+                    <p>The victor of this game gains the privilege to showcase whatever they desire on this very website.</p>
                   </div>
                 </div>
               </div>
@@ -25,11 +25,11 @@
                   <br/>
                   <div class="content">
                     <ul>
-                        <li>The rules to the game are quite simple. Keep the button alive for the allotted time. In this case, it's set to one month.</li>
-                        <li>The button can be saved simply by posting `!save` in our groupme chat. The clock will be reset, and your score will be determined by how low the button was. The lower the score, the better.</li>
-                        <li>Your score will ALWAYS be overridden. For example: If your past save was in the green zone and you send `!save` when it's blue, your score is now in the blue zone.</li>
-                        <li>The button status will only be obtained by checking. Status alerts will not be sent to the chat. Additionally, you will not know what the other players have saved the button at (unless they tell you).</li>
-                        <li> Lastly and most importantly, if the button dies, everyone loses.</li>
+                      <li>The rules of the game are refreshingly simple: Keep the button alive throughout the designated time frame, which, in this case, is set at one month.</li>
+                      <li>To safeguard the button's existence, all you need to do is post `!save` in our GroupMe chat. This action will reset the countdown clock, and your score will be based on the button's proximity to the bottom. Lower scores indicate better performance.</li>
+                      <li>It's important to note that your previous score will always be replaced. For example, if you previously saved the button while it was in the "green zone", but you send a `!save` when it's in the "blue zone", your score will now correspond to the "blue zone".</li>
+                      <li>The current state of the button will only be revealed upon checking. The game won't send status alerts to the chat. Furthermore, unless fellow players choose to disclose their actions, you won't be aware of the levels at which others have saved the button.</li>
+                      <li>Lastly, and perhaps most crucially, if the button ceases to exist, it's a collective loss for everyone.</li>
                     </ul>
                   </div>
                 </div>
