--- a/index.html
+++ b/index.html
@@ -1,3 +1,49 @@
-<html>
-    <h3>I'm a big poo poo head.</h3>
+<!-- 
+    This webpage is a product of Eric Davidson winning the button game 
+    which awards him the ability to place whatever he wants on it.  
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anthony Mastria</title>
+
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+        }
+
+        body {
+            display: flex;
+            height: 100vh;
+            width: 100vw;
+            overflow: hidden;
+
+            justify-content: center;
+            color: rgb(240,240,240);
+            background-color: rgb(50,50,50);
+        }
+
+        .quote {
+            position: absolute;
+            top: 30%;
+        }
+
+        .quote p {
+            position: relative;
+            left: 100px;
+        }
+
+
+    </style>
+</head>
+<body>
+    <div class="quote">
+        <h2>"Suck it Steve"</h2>
+        <p>- Eric Davidson</p>
+    </div>
+</body>
 </html>
+
